kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: backend
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
